# spatter

./: CMakeLists.txt  Compilation_Instructions.txt  README.md  Run_JSON_Tests.sh  Run_Testcases.sh  build_script.sh
Test_Reports/: TT_SAR.xlsx
build_serial/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  gz_read  spatter
build_serial/src/: Makefile  cmake_install.cmake
build_serial/src/Spatter/: Makefile  cmake_install.cmake
build_serial/tests/: CTestTestfile.cmake  Makefile  binary-trace  cmake_install.cmake  concurrent  multilevel  parse_concurrent  parse_custom_suite  parse_json_suite  parse_ms1_suite  parse_multilevel  parse_random_suite  parse_run_config_suite_cpu  parse_size  parse_uniform_stride_1  parse_uniform_stride_suite  standard_laplacian_suite  standard_ms1_suite  standard_suite_cpu  standard_uniform_suite
cmake/pkgs/: MetaliumSupport.cmake
src/: CMakeLists.txt  main.cc
src/Spatter/: CMakeLists.txt  Configuration.cc  Configuration.hh  Input.hh  JSONParser.cc  JSONParser.hh  MetaliumBackend.cc  MetaliumBackend.hh  PatternParser.cc  SpatterTypes.hh
src/Spatter/kernels/compute/: gather.cpp
src/Spatter/kernels/compute/core/: gather_compute_kernel.cpp  gather_compute_kernel_mc.cpp  multi_gather_compute_kernel.cpp  multi_gather_compute_kernel_mc.cpp  multi_scatter_compute_kernel.cpp  multi_scatter_compute_kernel_mc.cpp  multigather_compute_kernel.cpp  multigather_compute_kernel_mc.cpp  scatter_compute_kernel.cpp  scatter_compute_kernel_mc.cpp  scatter_gather_compute_kernel.cpp  scatter_gather_compute_kernel_mc.cpp
src/Spatter/kernels/compute/data/: gather_read_kernel_compute.cpp  gather_read_kernel_compute_mc.cpp  gather_write_kernel_compute copy.cpp  gather_write_kernel_compute.cpp  gather_write_kernel_compute_mc.cpp  multi_gather_read_kernel_compute_mc.cpp  multi_gather_write_kernel_compute_mc.cpp  multi_scatter_read_kernel_compute.cpp  multi_scatter_read_kernel_compute_mc.cpp  multi_scatter_write_kernel_compute.cpp  multi_scatter_write_kernel_compute_mc.cpp  multigather_read_kernel_compute.cpp  multigather_write_kernel_compute.cpp  scatter_gather_read_kernel_compute.cpp  scatter_gather_read_kernel_compute_mc.cpp  scatter_gather_write_kernel_compute.cpp  scatter_gather_write_kernel_compute_mc.cpp  scatter_read_kernel_compute.cpp  scatter_read_kernel_compute_mc.cpp  scatter_write_kernel_compute.cpp  scatter_write_kernel_compute_mc.cpp
src/Spatter/kernels/data/: gather_kernel_in_riscv.cpp  gather_kernel_in_riscv_multicore.cpp  read_kernel.cpp  scatter_kernel_in_riscv_multicore.cpp
src/Spatter/kernels/riscv/: gather_kernel_in_riscv.cpp  gather_kernel_in_riscv_multicore.cpp  multi_gather_kernel_in_riscv.cpp  multi_gather_kernel_in_riscv_multicore.cpp  multi_scatter_kernel_in_riscv.cpp  multi_scatter_kernel_in_riscv_multicore.cpp  multigather_kernel_in_riscv.cpp  multigather_kernel_in_riscv_multicore.cpp  scatter_gather_kernel_in_riscv.cpp  scatter_gather_kernel_in_riscv_multicore.cpp  scatter_kernel_in_riscv.cpp  scatter_kernel_in_riscv_multicore.cpp
standard-suite/basic-tests/: cpu-stream.json
